--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!
+{% block title %}Hello MainPage!
 {% endblock %}
 {% block stylesheets %}
 	<link rel="stylesheet" href="{{asset('styles/main/main.css')}}">
