--- a/templates/components/EntranceForm.html.twig
+++ b/templates/components/EntranceForm.html.twig
@@ -1,22 +1,22 @@
-<div class="entrance_form__wrapper position-absolute top-50 start-50 translate-middle">
-	<div class="p-4 ps-4 rounded-2 bg-info
-						    entrance_form {{hide}} d-flex flex-column">
+<div class="entrance_form__wrapper position-absolute {{hide}}" data-form={{type}}>
+	<div class="p-4 ps-4 rounded-2 bg-info entrance_form  d-flex flex-column">
 		<h3 class="m-0">{{title}}</h3>
 		{% if type == 'login' %}
-			{{ form_start(login, {'attr': {'class': 'form_wrapper'}}) }}
-			{{ form_errors(login) }}
-			{{ form_widget(login, {'attr': {'class': 'd-flex flex-column gap-3 mt-3'}}) }}
-			{{ form_end(login) }}
+			{{ form_start(user, {'attr': {'class': 'form_wrapper', 'data-form': 'login'}}) }}
+			{{ form_errors(user) }}
+			<div class="flex-column d-flex gap-3 mt-3"></div>
+			{{ form_widget(user, {'attr': {'class': 'd-flex flex-column gap-3 mt-3'}}) }}
+			{{ form_end(user) }}
 			<div class="d-flex align-items-center justify-content-end mt-3">
-				<span class="entrance_form__change_view" data-goto="registration">No accont? Sign up!</span>
+				<span class="entrance_form__change_view" data-goto="login">No accont? Sign up!</span>
 			</div>
 		{% else %}
-			{{ form_start(user_details, {'attr': {'class': 'form_wrapper'}}) }}
+			{{ form_start(user_details, {'attr': {'class': 'form_wrapper', 'data-form': 'registration'}}) }}
 			{{ form_errors(user_details) }}
 			{{ form_widget(user_details, {'attr': {'class': 'd-flex flex-column gap-3 mt-3'}}) }}
 			{{ form_end(user_details) }}
 			<div class="d-flex align-items-center justify-content-end mt-3">
-				<span class="entrance_form__change_view" data-goto="login">Do you have account? Sign in!</span>
+				<span class="entrance_form__change_view" data-goto="registration">Do you have account? Sign in!</span>
 			</div>
 		{% endif %}
 
