--- a/assets/styles/components/entrance_form.css
+++ b/assets/styles/components/entrance_form.css
@@ -1,15 +1,22 @@
 .entrance_form__wrapper {
     width: clamp(290px, 33vw, 640px);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
 }
 
 .entrance_form {
-    opacity: 1;
     max-width: 100%;
-    transition: opacity 0.4s;
     margin: 0 auto;
 }
 
-.entrance_form.hide {
+.entrance_form input {
+    outline: transparent;
+    transition: outline 0.4s ease;
+}
+
+.entrance_form__wrapper.hide {
     opacity: 0;
 }
 
