--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,9 @@
 		{% endblock %}
 	</head>
 	<body>
-		{{include('./bar/navbar.html.twig')}}
+		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+			{{include('./bar/navbar.html.twig')}}
+		{% endif %}
 		{% block body %}{% endblock %}
 	</body>
 </html>
