--- a/assets/styles/components/controls.css
+++ b/assets/styles/components/controls.css
@@ -1,3 +1,20 @@
 .controls {
     align-items: start;
+    padding: 4rem 2rem 0;
+}
+
+.controls__button {
+    border: none;
+}
+
+/*BLOCK BUTTON*/
+.block_icon {
+    gap: 1.125rem;
+    align-items: center;
+}
+
+.block_icon svg {
+    width: 1rem;
+    height: 1.5rem;
+    fill: var(--bs-white);
 }
