--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block javascripts %}
 	{% block importmap %}
-		{{ importmap('main') }}
+		{{ importmap(['app', 'main']) }}
 	{% endblock %}
 {% endblock %}
 
